--- a/climate.html
+++ b/climate.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Climate Crisis</title>
     <link rel="stylesheet" href="climate.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
     <header class="main-header">
-        <h1>Climate Crisis Awareness</h1>
+        <h1>CC</h1>
     </header>
 
 
@@ -158,10 +161,10 @@
             <div class="resources">
                 <h3>Resources</h3>
                 <ul>
-                    <li><a href="https://www.nature.com" target="_blank">Nature Articles</a></li>
-                    <li><a href="https://www.ipcc.ch" target="_blank">IPCC Reports</a></li>
-                    <li><a href="https://www.nationalgeographic.com" target="_blank">National Geographic</a></li>
-                    <li><a href="https://www.worldwildlife.org" target="_blank">World Wildlife Fund</a></li>
+                    <li><a href="https://www.nature.com" target="_blank" rel="noopener">Nature Articles</a></li>
+                    <li><a href="https://www.ipcc.ch" target="_blank" rel="noopener">IPCC Reports</a></li>
+                    <li><a href="https://www.nationalgeographic.com" target="_blank" rel="noopener">National Geographic</a></li>
+                    <li><a href="https://www.worldwildlife.org" target="_blank" rel="noopener">World Wildlife Fund</a></li>
                 </ul>
             </div>
         </div>
@@ -172,8 +175,6 @@
 
 
 
-
-
     <div id="progress-bar">
         <div id="progress"></div>
         <div class="progress-marker progress-marker-one"></div>
@@ -181,7 +182,6 @@
         <div class="progress-marker progress-marker-three"></div>
         <div class="progress-marker progress-marker-four"></div>
     </div>
-
 
     <script src="progress.js"></script>
 
